@@ -1,6 +1,7 @@
 pulsedb (0.6)
 
   * reduce memory usage on long queries
+  * fix big number packing on disk
 
 pulsedb (0.5)
 
